# chibi26_c

./: .gitignore  CMakeLists.txt  README.md  all_codes_combined.txt  combine_codes.py
bag/: rviz_debag.rviz
bag/map/: c_map.pgm  c_map.yaml
bag/rosbag2_2026_03_11-05_14_01/: metadata.yaml
bag/rosbag2_2026_04_07-06_25_46/: metadata.yaml
bag/rosbag2_2026_04_21-06_11_38/: metadata.yaml  rosbag2_2026_04_21-06_11_38_0.db3
bag/rosbag2_2026_04_22-06_30_21/: metadata.yaml
bag/rosbag2_2026_05_06-08_26_29/: metadata.yaml
bag/rosbag2_2026_05_06-09_13_26/: metadata.yaml
config/: obstacle_detector.yaml
global_path_planner/: CMakeLists.txt  README.md  package.xml
global_path_planner/config/param/: global_path_planner.yaml
global_path_planner/include/global_path_planner/: global_path_planner.hpp
global_path_planner/launch/: global_path_planner.launch.xml
global_path_planner/map/: c_map.pgm  c_map.yaml
global_path_planner/src/: global_path_planner.cpp  global_path_planner_node.cpp
include/localizer/: particle.hpp
local_goal_creator/: CMakeLists.txt  package.xml
local_goal_creator/config/param/: local_goal_creator.yaml
local_goal_creator/include/local_goal_creator/: local_goal_creator.hpp
local_goal_creator/src/: local_goal_creator.cpp  local_goal_creator_node.cpp
local_map_creator/: CMakeLists.txt  package.xml
local_map_creator/include/local_map_creator/: local_map_creator.hpp
local_map_creator/src/: local_map_creator.cpp  local_map_creator_node.cpp
local_path_planner/: CMakeLists.txt  package.xml
local_path_planner/config/param/: local_path_planner.yaml
local_path_planner/include/local_path_planner/: local_path_planner.hpp
local_path_planner/launch/: team_c_debag.py  team_c_play.py
local_path_planner/src/: local_path_planner.cpp  local_path_planner_node.cpp
localizer/: CMakeLists.txt  package.xml
localizer/config/param/: localizer.yaml
localizer/include/localizer/: localizer.hpp  odom_model.hpp  particle.hpp  pose.hpp
localizer/src/: localizer.cpp  localizer_node.cpp  odom_model.cpp  particle.cpp  pose.cpp
map/: b_map_fixed.pgm  b_map_fixed.pgm:Zone.Identifier  b_map_fixed.yaml  b_map_fixed.yaml:Zone.Identifier  c_map.yaml
obstacle_detector/: CMakeLists.txt  package.xml
obstacle_detector/config/: obstacle_detector.yaml
obstacle_detector/include/obstacle_detector/: obstacle_detector.hpp
obstacle_detector/src/: obstacle_detector.cpp  obstacle_detector_node.cpp
src/: localizer.cpp  localizer_node.cpp  obstacle_detector.cpp  odom_model.cpp  particle.cpp
